; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/rme9652/extr_rme9652.c_rme9652_sync_pref.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/rme9652/extr_rme9652.c_rme9652_sync_pref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_rme9652 = type { i32 }

@RME9652_SyncPref_Mask = common dso_local global i32 0, align 4
@RME9652_SYNC_FROM_ADAT1 = common dso_local global i32 0, align 4
@RME9652_SYNC_FROM_ADAT2 = common dso_local global i32 0, align 4
@RME9652_SYNC_FROM_ADAT3 = common dso_local global i32 0, align 4
@RME9652_SYNC_FROM_SPDIF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_rme9652*)* @rme9652_sync_pref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rme9652_sync_pref(%struct.snd_rme9652* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.snd_rme9652*, align 8
  store %struct.snd_rme9652* %0, %struct.snd_rme9652** %3, align 8
  %4 = load %struct.snd_rme9652*, %struct.snd_rme9652** %3, align 8
  %5 = getelementptr inbounds %struct.snd_rme9652, %struct.snd_rme9652* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @RME9652_SyncPref_Mask, align 4
  %8 = and i32 %6, %7
  switch i32 %8, label %17 [
    i32 131, label %9
    i32 130, label %11
    i32 129, label %13
    i32 128, label %15
  ]

9:                                                ; preds = %1
  %10 = load i32, i32* @RME9652_SYNC_FROM_ADAT1, align 4
  store i32 %10, i32* %2, align 4
  br label %18

11:                                               ; preds = %1
  %12 = load i32, i32* @RME9652_SYNC_FROM_ADAT2, align 4
  store i32 %12, i32* %2, align 4
  br label %18

13:                                               ; preds = %1
  %14 = load i32, i32* @RME9652_SYNC_FROM_ADAT3, align 4
  store i32 %14, i32* %2, align 4
  br label %18

15:                                               ; preds = %1
  %16 = load i32, i32* @RME9652_SYNC_FROM_SPDIF, align 4
  store i32 %16, i32* %2, align 4
  br label %18

17:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %18

18:                                               ; preds = %17, %15, %13, %11, %9
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
